#0000 Optimization and corrections